WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144463
js/regress/is-string-fold-tricky.html and js/regress/is-string-fold.html are crashing
https://bugs.webkit.org/show_bug.cgi?id=144463
Summary
js/regress/is-string-fold-tricky.html and js/regress/is-string-fold.html are ...
Filip Pizlo
Reported
2015-04-30 11:53:17 PDT
Should be an easy fix. Patch coming soon. Skipping the tests for now.
Attachments
the patch
(4.78 KB, patch)
2015-04-30 15:57 PDT
,
Filip Pizlo
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-04-30 15:57:26 PDT
Created
attachment 252099
[details]
the patch
Filip Pizlo
Comment 2
2015-04-30 16:04:13 PDT
Landed in
http://trac.webkit.org/changeset/183650
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug