LayoutTests/js/regress/script-tests/is-string-fold-tricky.js
@@ -1,6 +1,3 @@
-// webkit.org/b/144463
-//@ skip
-
 var object = {};
 (function() {
     var result = 0;
